# mahabharabot

./: O.txt  README.md  parse.py  pyproject.toml  requirements.txt  toot.py
.github/workflows/: main.yml
