[project]
name = "mahabharabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blurhash",
    "certifi",
    "charset-normalizer",
    "decorator",
    "idna",
    "mastodon-py",
    "python-dateutil",
    "python-magic",
    "requests",
    "six",
    "urllib3",
]
